stack/cluster-infra/k8-dashboard/k8-dashboard-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  # namespace: kubernetes-dashboard
spec:
  entryPoints:                     
    - websecure
  routes:                          
  - kind: Rule
    match:  Host(`k8.localhost`)
    priority: 10                   
    services:                      
    - kind: Service 
      name: kubernetes-dashboard
      # namespace: kubernetes-dashboard
      port: 443                     
      serversTransport: kubernetes-dashboard-transport
  # tls:                             
    # certResolver: dns-cloudflare
